# aipm

./: .env  .env.prod  .env.simple  .eslintrc.cjs  .gitignore  .kirocontext  ADD_ECS_PERMISSIONS.md  AI-ENGINE-STATUS-REPORT.md  AIPM-1.md  AIPM-999.md  AIPM-undefined.md  AIPM_202511271755.conversation  AIPM_20251205.conversation  AIPM_20251213_0319.conversation  AIPM_Development_Documentation.md  AI_ASSISTANT_GUIDELINES.md  AI_ASSISTANT_PROMPT.md  ALTERNATIVE_TEST_EXECUTION_METHODS.md  AMAZON_AI_REFACTORING.md  AMAZON_Q_INTEGRATION.md  AMAZON_Q_WORKFLOW.md  ARCHITECTURE_CORRECTION_SUMMARY.md  ARCHITECTURE_CORRECT_2026.md  ARCHITECTURE_CURRENT_2025.md  ARCHITECTURE_UPDATE_2025.md  ASSIGNEE_FEATURE_SUMMARY.md  AUTO_GENERATE_ACCEPTANCE_TESTS_IMPLEMENTATION.md  BEDROCK_SETUP.md  BEDROCK_VS_AMAZONQ_COMPARISON.md  BOTTLENECK_ANALYSIS.md  CLOUD9_SETUP.md  CLOUD_DEV_COMPARISON.md  CODEGEN_README.md  CODESPACES_SETUP.md  CODE_GENERATION_IMPLEMENTATION.md  CODE_STRUCTURE_2025.md  COMPLETE-SETUP-GUIDE.md  CONVERSATION_CONTEXT.md  CRITICAL_PRINCIPLES.md  Conversation_AIPM_20251127_063539.md  (+2213 more)
apps/backend/: amazon-ai.js  app.js  app.js.backup  code-generation-test.js  codex-builtin-service.js  codex-chatgpt-service.js  codex-config.js  codex-delegation-server.js  codex-delegation.js  codex-utils.js  config.js  dynamodb.js  dynamodb.js.bak  ecs-trigger.js  emailValidationAPI.js  github-pr-service.js  handler.cjs  handler.mjs  kiro-ai.js  kiro-handler.js  kiro-queue.js  lambda-handler.js  local-codex-delegation.js  microservices.js  native-dynamodb.js  oauth.js  oauth2.js  package.json  (+10 more)
(+998 files in other folders)
